<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_barriers"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/settings"
        android:text="@string/settings"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_barriers"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/cameraType"
        android:text="@string/camera"
        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/camera_settings"
        app:layout_constraintEnd_toEndOf="@+id/cameraType"
        app:layout_constraintStart_toStartOf="@+id/cameraType"
        app:layout_constraintTop_toBottomOf="@+id/cameraType" />

    <EditText
        android:id="@+id/cameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/camera_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
