<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_barriers"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/placeholder"
        android:scaleType="centerCrop"
        android:src="@drawable/singapore"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_barriers"
        app:layout_constraintRight_toRightOf="@+id/activity_main_barriers"
        app:layout_constraintTop_toTopOf="@+id/activity_main_barriers"
/>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/info_background"
        android:padding="5dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_barriers"
        app:layout_constraintRight_toRightOf="@+id/activity_main_barriers"
        app:layout_constraintTop_toTopOf="@+id/activity_main_barriers"
        app:layout_constraintVertical_bias="0.19"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/singapore"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_barriers"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/settings"
        android:text="@string/settings"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_barriers"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/cameraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:labelFor="@+id/cameraType"
        android:text="@string/camera"
        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/camera_settings"
        app:layout_constraintEnd_toEndOf="@+id/cameraType"
        app:layout_constraintStart_toStartOf="@+id/cameraType"
        app:layout_constraintTop_toBottomOf="@+id/cameraType"
       />

    <EditText
        android:id="@+id/cameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/camera_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginRight="16dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="settingsLabel,cameraLabel"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
